added brush settings interface