@@ -16,7 +16,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
-package net.onelitefeather.bettergopaint.objects.player;
+package net.onelitefeather.bettergopaint.brush;
 
 import net.onelitefeather.bettergopaint.objects.brush.AngleBrush;
 import net.onelitefeather.bettergopaint.objects.brush.Brush;
@@ -29,6 +29,7 @@ import net.onelitefeather.bettergopaint.objects.brush.PaintBrush;
 import net.onelitefeather.bettergopaint.objects.brush.SphereBrush;
 import net.onelitefeather.bettergopaint.objects.brush.SplatterBrush;
 import net.onelitefeather.bettergopaint.objects.brush.SprayBrush;
+import net.onelitefeather.bettergopaint.objects.brush.UnderlayBrush;
 import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
@@ -37,12 +38,10 @@ import java.util.List;
 
 public class PlayerBrushManager {
 
-    private final HashMap<String, PlayerBrush> playerBrushes;
-    private final List<Brush> brushes;
+    private final HashMap<String, PlayerBrush> playerBrushes = new HashMap<>();
+    private final List<Brush> brushes = new ArrayList<>();
 
     public PlayerBrushManager() {
-        playerBrushes = new HashMap<>();
-        brushes = new ArrayList<>();
         brushes.add(new SphereBrush());
         brushes.add(new SprayBrush());
         brushes.add(new SplatterBrush());
@@ -50,73 +49,71 @@ public class PlayerBrushManager {
         brushes.add(new BucketBrush());
         brushes.add(new AngleBrush());
         brushes.add(new OverlayBrush());
+        brushes.add(new UnderlayBrush());
         brushes.add(new FractureBrush());
         brushes.add(new GradientBrush());
         brushes.add(new PaintBrush());
     }
 
-    public PlayerBrush getPlayerBrush(Player p) {
+    public PlayerBrush getBrush(Player p) {
         if (playerBrushes.containsKey(p.getName())) {
             return playerBrushes.get(p.getName());
         } else {
-            PlayerBrush pb = new PlayerBrush();
+            PlayerBrush pb = new PlayerBrush(this);
             playerBrushes.put(p.getName(), pb);
             return pb;
         }
     }
 
     public String getBrushLore(String name) {
-        // &eSphere Brush___&8Spray Brush___&8Splatter Brush___&8Disc Brush___&8Bucket Brush___&8Angle Brush___&8Overlay Brush
+        // &eSphere Brush\n&8Spray Brush\n&8Splatter Brush\n&8Disc Brush\n&8Bucket Brush\n&8Angle Brush\n&8Overlay Brush
         StringBuilder s = new StringBuilder();
         for (Brush b : brushes) {
             if (b.getName().equalsIgnoreCase(name)) {
-                s.append("&e").append(b.getName()).append("___");
+                s.append("&e").append(b.getName()).append("\n");
             } else {
-                s.append("&8").append(b.getName()).append("___");
+                s.append("&8").append(b.getName()).append("\n");
             }
         }
-        return s.substring(0, s.length() - 3);
+        return s.substring(0, s.length());
     }
 
-    public Brush getBrush(String name) {
+    public Brush getBrushHandler(String name) {
         for (Brush b : brushes) {
             if (b.getName().equalsIgnoreCase(name)) {
                 return b;
             }
         }
-        return brushes.get(0);
+        return brushes.getFirst();
     }
 
     public List<Brush> getBrushes() {
         return brushes;
     }
 
-    public void removePlayerBrush(Player p) {
-        if (playerBrushes.containsKey(p.getName())) {
-            playerBrushes.remove(playerBrushes.get(p.getName()));
-        }
+    public void removeBrush(Player player) {
+        playerBrushes.remove(player.getName());
     }
 
-    public Brush cycle(Brush b) {
-        if (b == null) {
-            return brushes.get(0);
+    public Brush cycle(Brush brush) {
+        if (brush == null) {
+            return brushes.getFirst();
         }
-        int next = brushes.indexOf(b) + 1;
+        int next = brushes.indexOf(brush) + 1;
         if (next < brushes.size()) {
             return brushes.get(next);
         }
-        return brushes.get(0);
+        return brushes.getFirst();
     }
 
     public Brush cycleBack(Brush b) {
         if (b == null) {
-            return brushes.get(0);
+            return brushes.getFirst();
         }
         int back = brushes.indexOf(b) - 1;
         if (back >= 0) {
             return brushes.get(back);
         }
-        return brushes.get(brushes.size() - 1);
+        return brushes.getLast();
     }
-
 }
